--- a/CSS/SCSS/main.scss
+++ b/CSS/SCSS/main.scss
@@ -1,14 +1,16 @@
 
+
+@import "var.scss";
 @import "normalize.scss";
+
+
+@import "fonts.scss";
 
 
 // media
 @import "media.scss";
 
 
-
-
-@import "fonts.scss";
 
 
 @import "layout.scss";
