--- a/CSS/SCSS/media.scss
+++ b/CSS/SCSS/media.scss
@@ -3,3 +3,21 @@
   
 }
 
+
+
+
+@mixin tablet {
+  @media (max-width: $tablet) {
+    @content;
+  
+  }
+}
+@mixin smart {
+  @media (max-width: $smart) {
+    @content;
+  
+  }
+}
+
+
+
