--- a/CSS/SCSS/main_page.scss
+++ b/CSS/SCSS/main_page.scss
@@ -5,14 +5,42 @@
 .hero__content {
   display: flex;
   align-items: center;
+  margin-top: rem(-70px);
+
+  @include tablet {
+    flex-direction: column;
+    padding: 0 12%;
+  }
+
+ 
+
 }
 
 .hero__picture {
   margin-right: rem(10px);
+  width: 50%;
+
+  @include tablet {
+    width: 100%;
+  }
+
+}
+
+.hero__text {
+  width: 50%;
+  @include tablet {
+    width: 90%;
+
+  }
 }
 
 .hero__title {
   color: orange;
+
+  @include tablet {
+    font-size: rem(63px);
+  }
+
 }
 
 
@@ -48,6 +76,17 @@
   position: fixed;
   top: rem(90px);
   right: rem(50px);
+
+
+  @include tablet {
+    display: none;
+  }
+
+  @include smart {
+    display: none;
+  }
+
+
 }
 
 .pagination__item {
