Fixed some bags

--- a/CSS/SCSS/reviews.scss
+++ b/CSS/SCSS/reviews.scss
@@ -48,6 +48,8 @@
 
   color: $white;
 
+  padding: 10%;
+
 
   .review__title {
     font-family: 'Gagalin';
@@ -62,6 +64,8 @@
     line-height: 1.71;
     margin-bottom: rem(15px);
 
-    p {}
+    p {
+      
+    }
   }
 }
