--- a/CSS/css/compile.css
+++ b/CSS/css/compile.css
@@ -814,6 +814,7 @@ body {
   opacity: 0;
   transition: opacity 0.3s;
   color: #ffffff;
+  padding: 10%;
 }
 .review__hover .review__title {
   font-family: "Gagalin";
@@ -1074,10 +1075,12 @@ body {
 }
 
 .team-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   position: relative;
-  width: 100%;
-  margin-right: 0;
-  margin-left: 0;
+  margin: 0 0;
 }
 
 .team__wrapper {
@@ -1088,6 +1091,7 @@ body {
   top: 0;
   right: 0;
   bottom: 0;
+  left: 50%;
 }
 @media (max-width: 768px) {
   .team__wrapper {
@@ -1101,7 +1105,11 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
+}
+@media (max-width: 768px) {
+  .team__content {
+    text-align: center;
+  }
 }
 
 .team-title {
