--- a/CSS/SCSS/main.scss
+++ b/CSS/SCSS/main.scss
@@ -27,6 +27,7 @@
 @import "title.scss";
 
 @import "whe_are.scss";
+@import "burger__menu.scss";
 @import "form.scss";
 @import "team_acordeon.scss";
 @import "menu.scss";
