--- a/CSS/SCSS/normalize.scss
+++ b/CSS/SCSS/normalize.scss
@@ -39,7 +39,9 @@ textarea {
   width: 100%;
 }
 
-
+img {
+  max-width: 100%;
+}
 
 /* ==========================================================================
    Normalize.scss settings
