--- a/CSS/SCSS/map.scss
+++ b/CSS/SCSS/map.scss
@@ -1,10 +1,15 @@
 .map {
 display: flex;
 flex-direction: column;
+flex: 1;
+
+&-img {
+background-size: cover;
 }
 
 
-.map-img {
-  width: 100%;
-  height: 100%;
 }
+
+
+
+
