--- a/CSS/SCSS/reviews.scss
+++ b/CSS/SCSS/reviews.scss
@@ -23,7 +23,9 @@
   @include tablet {
     width: 50%;
     height: 25%;
+    text-align: center;
   }
+
 
 
   &:hover {
@@ -37,6 +39,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   position: absolute;
   top: 0;
   left: 0;
@@ -51,10 +54,25 @@
   padding: 10%;
 
 
+  @include tablet {
+    align-items: center;
+  }
+
+
+  @include smart {
+    align-items: center;
+  }
+
   .review__title {
     font-family: 'Gagalin';
     font-size: rem(14px);
     line-height: 2;
+
+    @include smart {
+      font-size: rem(24px);
+      line-height: 1.17;
+      text-align: center;
+    }
   }
 
   .review__text {
@@ -65,7 +83,24 @@
     margin-bottom: rem(15px);
 
     p {
-      
+      @include smart {
+        display: none;
+      }
+    }
+  }
+}
+
+
+.review__btn {
+  @include smart {
+    display: none;
+  }
+
+  &-hidden {
+    display: none;
+
+    @include smart {
+      display: block;
     }
   }
 }
