--- a/CSS/css/compile.css
+++ b/CSS/css/compile.css
@@ -36,6 +36,10 @@ textarea {
   width: 100%;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* ==========================================================================
    Normalize.scss settings
    ========================================================================== */
@@ -515,7 +519,7 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 100%;
+  width: 95%;
   max-width: 58.75rem;
   height: 100%;
   display: flex;
@@ -564,6 +568,68 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.header__menu_active {
+  background: rgba(47, 49, 52, 0.9);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 99;
+}
+.header__menu_active .header__btns {
+  width: 100%;
+  justify-content: center;
+}
+.header__menu_active .logo {
+  position: fixed;
+}
+.header__menu_active .nav {
+  display: block;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.header__menu_active .nav__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header__menu_active .nav__item {
+  margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.header__menu_active .nav__item::before {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin-bottom: 20px;
+}
+.header__menu_active .order_btn {
+  display: none;
+}
+.header__menu_active .ham-stick {
+  opacity: 0.7;
+}
+.header__menu_active .ham-stick:nth-child(2) {
+  opacity: 0;
+}
+.header__menu_active .ham-stick:nth-child(1) {
+  transform: rotate(45deg);
+  transition: 0.5s;
+}
+.header__menu_active .ham-stick:nth-child(3) {
+  transform: rotate(-45deg) translate(13px, -13px);
+  transition: 0.8s;
+}
 
 .header__btns {
   display: flex;
@@ -596,6 +662,9 @@ body {
   top: 0.3125rem;
   left: -0.9375rem;
 }
+.nav__item:first-child::before {
+  display: none;
+}
 .nav__item_link {
   display: flex;
   align-items: center;
@@ -616,12 +685,13 @@ body {
 
 @media (max-width: 768px) {
   .order_btn {
-    margin-right: 1.875rem;
+    position: absolute;
+    right: 90px;
   }
 }
 @media (max-width: 480px) {
   .order_btn {
-    margin-right: 1.875rem;
+    right: 90px;
   }
 }
 
@@ -629,11 +699,20 @@ body {
   display: none;
 }
 
+.hamburger__menu {
+  position: absolute;
+  top: 20px;
+  right: 35px;
+  position: fixed;
+  top: 30px;
+}
+
 .ham-stick {
-  width: 35px;
-  height: 5px;
+  width: 24px;
+  height: 4px;
   background-color: white;
-  margin: 6px 0;
+  border-radius: 2px;
+  margin: 5px 0;
   display: none;
 }
 @media (max-width: 768px) {
@@ -691,7 +770,9 @@ body {
 }
 @media (max-width: 768px) {
   .hero__picture {
-    width: 100%;
+    width: 90%;
+    margin-right: 0;
+    margin-bottom: 3.125rem;
   }
 }
 
@@ -706,10 +787,13 @@ body {
 
 .hero__title {
   color: orange;
+  text-align: left;
+  margin-bottom: 2.5rem;
 }
 @media (max-width: 768px) {
   .hero__title {
     font-size: 3.9375rem;
+    text-align: center;
   }
 }
 
@@ -720,7 +804,11 @@ body {
   line-height: 1.31;
   letter-spacing: -1.6px;
   color: white;
-  text-align: center;
+}
+@media (max-width: 768px) {
+  .hero__desc {
+    text-align: center;
+  }
 }
 
 .arrow {
@@ -795,6 +883,7 @@ body {
   .review__item {
     width: 50%;
     height: 25%;
+    text-align: center;
   }
 }
 .review__item:hover .review__hover {
@@ -805,6 +894,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
   position: absolute;
   top: 0;
   left: 0;
@@ -816,10 +906,27 @@ body {
   color: #ffffff;
   padding: 10%;
 }
+@media (max-width: 768px) {
+  .review__hover {
+    align-items: center;
+  }
+}
+@media (max-width: 480px) {
+  .review__hover {
+    align-items: center;
+  }
+}
 .review__hover .review__title {
   font-family: "Gagalin";
   font-size: 0.875rem;
   line-height: 2;
+}
+@media (max-width: 480px) {
+  .review__hover .review__title {
+    font-size: 1.5rem;
+    line-height: 1.17;
+    text-align: center;
+  }
 }
 .review__hover .review__text {
   font-family: "Ubuntu";
@@ -828,15 +935,37 @@ body {
   line-height: 1.71;
   margin-bottom: 0.9375rem;
 }
+@media (max-width: 480px) {
+  .review__hover .review__text p {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .review__btn {
+    display: none;
+  }
+}
+.review__btn-hidden {
+  display: none;
+}
+@media (max-width: 480px) {
+  .review__btn-hidden {
+    display: block;
+  }
+}
+
 .title {
   font-family: "Gagalin";
   font-size: 4.5rem;
   line-height: 0.89;
   letter-spacing: normal;
-  text-align: center;
 }
 .title--orange {
   color: #e45028;
+}
+.title--yellow {
+  color: #f9b43b;
 }
 .title--white {
   color: #ffffff;
@@ -864,6 +993,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 0 2%;
+  margin-bottom: 2.8125rem;
 }
 @media (max-width: 480px) {
   .reason__item {
@@ -875,9 +1005,6 @@ body {
   margin-right: 0;
 }
 
-.reason__banner {
-  margin-bottom: 2.0625rem;
-}
 .reason__banner .reason-img {
   width: 6.0625rem;
 }
@@ -917,6 +1044,143 @@ body {
   }
 }
 
+.whe__are_svg {
+  width: 6.25rem;
+  height: 5.625rem;
+}
+
+.burger__slider_item {
+  display: none;
+}
+.burger__slider_item-active {
+  display: flex;
+}
+
+.burger__menu {
+  background-image: linear-gradient(to top, #f9b43b, #eb8c38 48%, #f9b43b 74%);
+}
+.burger__menu-container {
+  flex-direction: row;
+}
+
+.slider__content {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .slider__content {
+    flex-direction: column;
+  }
+}
+.slider__content .burger__contain {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.slider__content .burger {
+  position: relative;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 768px) {
+  .slider__content .burger {
+    width: 100%;
+  }
+}
+.slider__content .burger__contain .burger__btn {
+  display: flex;
+  width: 5.625rem;
+  height: 5.625rem;
+  background: #e35028;
+  border-radius: 0.3125rem;
+  align-items: center;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+}
+.slider__content .burger__contain .burger__btn_text {
+  color: #ffffff;
+  text-decoration: none;
+  font-family: "Gagalin";
+  font-size: 14px;
+  line-height: 2;
+}
+@media (max-width: 768px) {
+  .slider__content .burger .burger__picture {
+    width: 70%;
+  }
+}
+
+.burger__btn,
+.kkal-img {
+  position: absolute;
+}
+
+.kkal-img {
+  bottom: 0;
+  left: 0;
+}
+@media (max-width: 768px) {
+  .kkal-img {
+    top: 0;
+    left: 90%;
+  }
+}
+
+.description {
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .description {
+    width: 100%;
+    text-align: center;
+  }
+}
+.description .burger__menu-title {
+  margin-bottom: 3.4375rem;
+}
+.description .burger__desc {
+  font-family: "Ubuntu";
+  font-size: 14px;
+  line-height: 1.71;
+  color: #ffffff;
+  margin-bottom: 2.25rem;
+}
+.description .burger__price {
+  display: flex;
+  align-items: flex-end;
+}
+@media (max-width: 768px) {
+  .description .burger__price {
+    justify-content: center;
+  }
+}
+.description .burger__price .burger__cost {
+  margin-right: 1.875rem;
+}
+.description .burger__price span {
+  margin-left: -1.25rem;
+  font-size: 1.75rem;
+  letter-spacing: -0.05rem;
+}
+
+.slider__arrow {
+  width: 1.6875rem;
+}
+.slider__arrow-left {
+  transform: rotate(90deg);
+}
+.slider__arrow-right {
+  transform: rotate(-90deg);
+}
+
 .title--orange-title {
   margin-bottom: 2.75rem;
 }
@@ -946,6 +1210,12 @@ body {
 @media (max-width: 768px) {
   .form {
     flex-direction: column;
+    width: 29.375rem;
+  }
+}
+@media (max-width: 480px) {
+  .form {
+    width: 95%;
   }
 }
 .form__row {
@@ -1066,7 +1336,6 @@ body {
 
 .checkbox input:checked + .checkbox__text:before {
   background: url(../../IMG-from-maket/checkmark_orange.png) center center/contain no-repeat;
-  transform: scale(0.8);
   transition: 0.2s;
 }
 
@@ -1151,8 +1420,9 @@ body {
   background: url("/IMG-from-maket/team_arrow.png") center center/cover no-repeat;
   height: 0.9375rem;
   width: 0.9375rem;
-  top: 0.625rem;
-  right: 13.75rem;
+  top: 0.3125rem;
+  left: -1.875rem;
+  transition: 0.5s;
 }
 
 .member__card {
@@ -1167,6 +1437,11 @@ body {
 
 .member__avatar {
   margin-right: 1.25rem;
+}
+@media (max-width: 480px) {
+  .member__avatar {
+    margin-right: 0;
+  }
 }
 .member__avatar > img {
   border-radius: 50%;
@@ -1194,24 +1469,18 @@ body {
   transition: height 0.5s ease-in-out;
 }
 
-.team__member {
-  display: block;
-  position: relative;
-  width: 12.5rem;
-}
-
-.team__member-active + .team__hidden {
+.team__item-active .team__hidden {
   height: 7.5rem;
-  padding-top: 17px;
 }
 @media (max-width: 768px) {
-  .team__member-active + .team__hidden {
+  .team__item-active .team__hidden {
     height: 14.0625rem;
   }
 }
 
-.team__member-active .team__member::before {
+.team__item-active .team__member::before {
   transform: rotate(-180deg);
+  transition: 0.5s;
 }
 
 .title-menu {
@@ -1230,6 +1499,11 @@ body {
   top: 0;
   right: 0;
 }
+@media (max-width: 480px) {
+  .menu__list {
+    position: relative;
+  }
+}
 .menu__item {
   display: flex;
 }
@@ -1245,11 +1519,18 @@ body {
     width: 18.75rem;
   }
 }
+@media (max-width: 480px) {
+  .menu__item:hover .menu__wrap {
+    flex: 1;
+    z-index: 1;
+  }
+}
 .menu__wrap {
   width: 0;
   overflow: hidden;
 }
 .menu__trigger {
+  padding-bottom: 2.8125rem;
   width: 5rem;
   text-decoration: none;
   display: flex;
@@ -1263,7 +1544,6 @@ body {
   color: #ffffff;
   text-decoration: none;
   transform: rotate(-90deg);
-  padding-bottom: 2.8125rem;
   text-align: center;
   white-space: nowrap;
   width: 100%;
@@ -1290,17 +1570,24 @@ body {
 .map {
   display: flex;
   flex-direction: column;
+  flex: 1;
+}
+.map-img {
+  background-size: cover;
 }
 
-.map-img {
-  width: 100%;
-  height: 100%;
+.map__section {
+  position: relative;
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   height: 3.75rem;
-  background: #2f3234;
+  background: url(../../IMG-from-maket/backgrounnds/footer_bg.jpg) center center/cover no-repeat;
   color: #ffffff;
+  width: 100%;
 }
 .footer__container {
   width: 100%;
@@ -1325,8 +1612,8 @@ body {
 }
 
 .phone-icon {
-  width: 0.9375rem;
-  height: 0.9375rem;
+  width: 0.75rem;
+  height: 0.75rem;
   fill: #e45028;
 }
 
@@ -1342,8 +1629,9 @@ body {
 .socials__item:last-child {
   margin-right: 0;
 }
-.socials__item a {
+.socials__item_link {
   color: #ffffff;
+  display: flex;
 }
 
 .vk-icon, .tw-icon, .inst-icon, .fb-icon {
