--- a/CSS/SCSS/footer.scss
+++ b/CSS/SCSS/footer.scss
@@ -6,7 +6,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  height: rem(60px);
+  min-height: rem(60px);
   background: url(../../IMG-from-maket/backgrounnds/footer_bg.jpg) center center / cover no-repeat;
 
   color: $white;
@@ -19,6 +19,12 @@
     justify-content: space-between;
     align-items: center;
 
+    @include smart {
+      flex-direction: column;
+      text-align: center;
+      padding: 10px;
+  }
+
   }
 }
 
@@ -26,6 +32,9 @@
 .contacts {
   display: flex;
   flex-direction: column;
+  @include smart {
+margin-bottom: 20px;
+  }
 
   .address {
     margin-bottom: rem(7px);
