--- a/CSS/SCSS/burger__menu.scss
+++ b/CSS/SCSS/burger__menu.scss
@@ -25,9 +25,9 @@
   .burger__menu {
     background-image: linear-gradient(to top, #f9b43b, #eb8c38 48%, #f9b43b 74%);
 
-    &-container {
-      flex-direction: row;
-    }
+    // &-container {
+    //   flex-direction: row;
+    // }
   }
 
 
