--- a/CSS/SCSS/burger__menu.scss
+++ b/CSS/SCSS/burger__menu.scss
@@ -1,25 +1,32 @@
+  .burger__menu-container {
+    display: flex;
+
+  }
+
+  .slider {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+
   .slider__wrap {
     flex: 1;
     overflow: hidden;
   }
 
+
+
   .burger__slider_list {
     display: flex;
     overflow: hidden;
+    transition: 1s;
+
   }
 
   .burger__slider_item {
     display: flex;
     flex: 1;
   }
-
-
-
-
-
-
-
-
 
 
   .burger__menu {
@@ -58,6 +65,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      height: 100%;
 
       @include tablet {
         width: 100%;
@@ -79,8 +87,11 @@
           flex-direction: column;
           justify-content: center;
           text-decoration: none;
+          // position: relative;
 
-
+          .contains {
+            position: absolute;
+          }
 
 
           &_text {
