--- a/CSS/SCSS/form.scss
+++ b/CSS/SCSS/form.scss
@@ -1,8 +1,6 @@
-.title--orange-title {
-  margin-bottom: rem(44px);
-}
-
 .form-title {
+  margin-bottom: rem(30px);
+
   @include tablet {
     text-align: center;
   }
@@ -215,4 +213,79 @@
 
 .submit__btn-clear {
   background: none;
+}
+
+
+.message {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(63, 66, 68, 0.9);
+  display: none;
+  z-index: 102;
+
+  &-active {
+    display: flex;
+  }
+}
+
+.msg {
+  position: relative;
+  background: white;
+  width: 400px;
+  height: 100px;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 30% auto;
+  text-align: center;
+}
+
+
+
+
+
+.hamburger__form {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  z-index: 101;
+  // background-color: white;
+
+}
+
+
+.form-stick {
+  width: 24px;
+  height: 4px;
+  background-color: black;
+  border-radius: 2px;
+  margin: 5px 0;
+  z-index: 102;
+  display: block;
+  // display: none;
+
+}
+
+
+
+.form-stick {
+  opacity: 0.7;
+
+  &:nth-child(2) {
+    opacity: 0;
+  }
+
+  &:nth-child(1) {
+    transform: rotate(45deg);
+    transition: 0.5s;
+  }
+
+  &:nth-child(3) {
+    transform: rotate(-45deg) translate(13px, -13px);
+    transition: 0.8s;
+  }
 }
