--- a/CSS/SCSS/layout.scss
+++ b/CSS/SCSS/layout.scss
@@ -1,14 +1,11 @@
-
-
-
-
-html{
+html {
   font-size: 16px;
 
 
   @include tablet {
     font-size: 14px;
   }
+
   @include smart {
     font-size: 13px;
   }
@@ -30,6 +27,23 @@ body {
   background-size: cover;
 }
 
+
+
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.maincontent {
+  height: 100%;
+  transform: translateY(0);
+  transition: transform 1s;
+
+}
+
 //mixins
 
 
@@ -42,7 +56,7 @@ body {
   min-height: rem(650px);
 }
 
-.container{
+.container {
   margin: 0 auto;
   width: 95%;
   max-width: rem(940px);
@@ -73,12 +87,12 @@ body {
 
 
 
-.hero{
-background: url(../../IMG-from-maket/backgrounnds/first-screen.png) center center / cover no-repeat;
+.hero {
+  background: url(../../IMG-from-maket/backgrounnds/first-screen.png) center center / cover no-repeat;
 }
 
-.whe-are-the-best{
-background: url(../../IMG-from-maket/backgrounnds/whe-are.png) center center / cover no-repeat;
+.whe-are-the-best {
+  background: url(../../IMG-from-maket/backgrounnds/whe-are.png) center center / cover no-repeat;
 }
 
 
@@ -94,11 +108,8 @@ background: url(../../IMG-from-maket/backgrounnds/whe-are.png) center center / c
   background: url(../../IMG-from-maket/backgrounnds/menu_main.jpg) center center / cover no-repeat;
 
 }
+
 .how_we_work-page {
   background: url(../../IMG-from-maket/backgrounnds/how_we_work.jpg) center center / cover no-repeat;
 
 }
-
-
-
-
