--- a/CSS/SCSS/map.scss
+++ b/CSS/SCSS/map.scss
@@ -1,15 +1,18 @@
 .map {
-display: flex;
-flex-direction: column;
-flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  height: 100%;
 
-&-img {
-background-size: cover;
+  &-img {
+    background-size: cover;
+  }
+
+
 }
 
-
+#google-map {
+  width: 100%;
+  height: 100%;
 }
-
-
-
-
