--- a/CSS/SCSS/reviews.scss
+++ b/CSS/SCSS/reviews.scss
@@ -115,7 +115,6 @@
   top: 0;
   left: 0;
   width: 100%;
-
   height: 100%;
   z-index: 101;
 
@@ -125,13 +124,23 @@
   justify-content: center;
   padding: 20px;
   color: $black;
+  display: none;
+
+  &-active {
+    display: flex;
+    transition: 0.5s;
+  }
+
+
+
 
   .review-popup {
     background: white;
     border-radius: 5px;
     padding: 10px;
+    position: relative;
 
-    
+
 
   }
 
@@ -148,5 +157,80 @@
     font-size: rem(14px);
     line-height: 1.71;
     margin-bottom: rem(15px);
+  }
+}
+
+
+///buttton close
+
+
+
+.review-close {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  // background: grey;
+
+  // display: none;
+}
+
+.review-msg {
+  position: relative;
+  // background: white;
+  // width: 400px;
+  // height: 100px;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 30% auto;
+  text-align: center;
+}
+
+
+
+
+
+.review__form {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  // z-index: 99;
+  // background-color: white;
+
+}
+
+
+.review-stick {
+  width: 24px;
+  height: 4px;
+  background-color: black;
+  border-radius: 2px;
+  margin: 5px 0;
+  z-index: 102;
+  display: block;
+  // display: none;
+
+}
+
+
+
+.review-stick {
+  opacity: 0.7;
+
+  &:nth-child(2) {
+    opacity: 0;
+  }
+
+  &:nth-child(1) {
+    transform: rotate(45deg);
+    transition: 0.5s;
+  }
+
+  &:nth-child(3) {
+    transform: rotate(-45deg) translate(13px, -13px);
+    transition: 0.8s;
   }
 }
