--- a/CSS/css/compile.css
+++ b/CSS/css/compile.css
@@ -512,6 +512,19 @@ body {
   background-size: cover;
 }
 
+.wrapper {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.maincontent {
+  height: 100%;
+  transform: translateY(0);
+  transition: transform 1s;
+}
+
 .section {
   height: 100vh;
   min-height: 40.625rem;
@@ -974,11 +987,17 @@ body {
   justify-content: center;
   padding: 20px;
   color: #2f3234;
+  display: none;
+}
+.review__mobile-clicked-active {
+  display: flex;
+  transition: 0.5s;
 }
 .review__mobile-clicked .review-popup {
   background: white;
   border-radius: 5px;
   padding: 10px;
+  position: relative;
 }
 .review__mobile-clicked .review__title-clicked {
   font-family: "Gagalin";
@@ -991,6 +1010,55 @@ body {
   font-size: 0.875rem;
   line-height: 1.71;
   margin-bottom: 0.9375rem;
+}
+
+.review-close {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.review-msg {
+  position: relative;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 30% auto;
+  text-align: center;
+}
+
+.review__form {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+}
+
+.review-stick {
+  width: 24px;
+  height: 4px;
+  background-color: black;
+  border-radius: 2px;
+  margin: 5px 0;
+  z-index: 102;
+  display: block;
+}
+
+.review-stick {
+  opacity: 0.7;
+}
+.review-stick:nth-child(2) {
+  opacity: 0;
+}
+.review-stick:nth-child(1) {
+  transform: rotate(45deg);
+  transition: 0.5s;
+}
+.review-stick:nth-child(3) {
+  transform: rotate(-45deg) translate(13px, -13px);
+  transition: 0.8s;
 }
 
 .how_we_work-title {
@@ -1091,6 +1159,16 @@ body {
   height: 5.625rem;
 }
 
+.burger__menu-container {
+  display: flex;
+}
+
+.slider {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
 .slider__wrap {
   flex: 1;
   overflow: hidden;
@@ -1099,6 +1177,7 @@ body {
 .burger__slider_list {
   display: flex;
   overflow: hidden;
+  transition: 1s;
 }
 
 .burger__slider_item {
@@ -1132,6 +1211,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 @media (max-width: 768px) {
   .slider__content .burger {
@@ -1151,6 +1231,9 @@ body {
   flex-direction: column;
   justify-content: center;
   text-decoration: none;
+}
+.slider__content .burger__contain .burger__btn .contains {
+  position: absolute;
 }
 .slider__content .burger__contain .burger__btn_text {
   color: #ffffff;
@@ -1228,10 +1311,9 @@ body {
   transform: rotate(-90deg);
 }
 
-.title--orange-title {
-  margin-bottom: 2.75rem;
+.form-title {
+  margin-bottom: 1.875rem;
 }
-
 @media (max-width: 768px) {
   .form-title {
     text-align: center;
@@ -1414,6 +1496,65 @@ body {
   background: none;
 }
 
+.message {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(63, 66, 68, 0.9);
+  display: none;
+  z-index: 102;
+}
+.message-active {
+  display: flex;
+}
+
+.msg {
+  position: relative;
+  background: white;
+  width: 400px;
+  height: 100px;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 30% auto;
+  text-align: center;
+}
+
+.hamburger__form {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  z-index: 101;
+}
+
+.form-stick {
+  width: 24px;
+  height: 4px;
+  background-color: black;
+  border-radius: 2px;
+  margin: 5px 0;
+  z-index: 102;
+  display: block;
+}
+
+.form-stick {
+  opacity: 0.7;
+}
+.form-stick:nth-child(2) {
+  opacity: 0;
+}
+.form-stick:nth-child(1) {
+  transform: rotate(45deg);
+  transition: 0.5s;
+}
+.form-stick:nth-child(3) {
+  transform: rotate(-45deg) translate(13px, -13px);
+  transition: 0.8s;
+}
+
 .team-container {
   height: 100%;
   display: flex;
@@ -1569,30 +1710,22 @@ body {
   top: 0;
   right: 0;
 }
-@media (max-width: 480px) {
-  .menu__list {
-    position: relative;
-  }
-}
 .menu__item {
   display: flex;
 }
 .menu__item:hover .menu__trigger span {
   color: #f9b43b;
 }
-.menu__item:hover .menu__wrap {
+.menu__item-active .menu__trigger span {
+  color: #f9b43b;
+}
+.menu__item-active .menu__wrap {
   width: 33.75rem;
   transition: 0.9s;
 }
 @media (max-width: 768px) {
-  .menu__item:hover .menu__wrap {
+  .menu__item-active .menu__wrap {
     width: 18.75rem;
-  }
-}
-@media (max-width: 480px) {
-  .menu__item:hover .menu__wrap {
-    flex: 1;
-    z-index: 1;
   }
 }
 .menu__wrap {
@@ -1637,13 +1770,33 @@ body {
   }
 }
 
+@media (max-width: 480px) {
+  .menu__item-active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+  .menu__item-active .menu__wrap {
+    width: 100%;
+  }
+}
+
 .map {
   display: flex;
   flex-direction: column;
   flex: 1;
+  width: 100%;
+  height: 100%;
 }
 .map-img {
   background-size: cover;
+}
+
+#google-map {
+  width: 100%;
+  height: 100%;
 }
 
 .map__section {
@@ -1676,6 +1829,7 @@ body {
 .contacts {
   display: flex;
   flex-direction: column;
+  margin-top: 10px;
 }
 @media (max-width: 480px) {
   .contacts {
@@ -1716,14 +1870,20 @@ body {
   display: flex;
 }
 
-.vk-icon, .tw-icon, .inst-icon, .fb-icon {
+.vk-icon,
+.tw-icon,
+.inst-icon,
+.fb-icon {
   width: 1.25rem;
   height: 1.25rem;
   fill: #ffffff;
   opacity: 0.3;
 }
 
-.vk-icon:hover, .tw-icon:hover, .inst-icon:hover, .fb-icon:hover {
+.vk-icon:hover,
+.tw-icon:hover,
+.inst-icon:hover,
+.fb-icon:hover {
   opacity: 1;
 }
 
