--- a/CSS/SCSS/team_acordeon.scss
+++ b/CSS/SCSS/team_acordeon.scss
@@ -1,5 +1,5 @@
 .team-container {
- 
+
 
   height: 100%;
   display: flex;
@@ -7,8 +7,8 @@
   // align-items: center;
   // justify-content: center;
   overflow: hidden;
-  
-  
+
+
   position: relative;
 
   margin: 0 0;
@@ -31,10 +31,7 @@
     left: 0;
   }
 
-  @include smart {
-
-
-  }
+  @include smart {}
 
 }
 
@@ -48,8 +45,8 @@
 
   @include tablet {
     text-align: center;
-}
-  
+  }
+
 
 
 
@@ -59,13 +56,13 @@
   margin-bottom: rem(46px);
 }
 
-.team__list{
+.team__list {
 
   @include tablet {
-display: flex;
-flex-direction: column;
-align-items: center;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
 }
 
@@ -77,7 +74,7 @@ align-items: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+  }
 }
 
 .team__member {
@@ -96,14 +93,14 @@ align-items: center;
     display: block;
     position: absolute;
 
-    background: url('/IMG-from-maket/team_arrow.png') center center / cover no-repeat;
+    background: url('../../IMG-from-maket/team_arrow.png') center center / cover no-repeat;
     height: rem(15px);
     width: rem(15px);
     top: rem(5px);
     left: rem(-30px);
     transition: 0.5s;
 
-    
+
   }
 
 }
@@ -118,16 +115,16 @@ align-items: center;
   @include tablet {
     flex-direction: column;
     align-items: center;
-}
-  
+  }
+
 }
 
 .member__avatar {
   margin-right: rem(20px);
 
   @include smart {
-margin-right: 0;  
-}
+    margin-right: 0;
+  }
 
   &>img {
     border-radius: 50%;
@@ -176,8 +173,8 @@ margin-right: 0;
 
   @include tablet {
     height: rem(225px);
-}
-  
+  }
+
 
 
 }
